Added Windows auto-start batch script and updated example config files accordingly

--- a/com.yourname.organizer.plist.example
+++ b/com.yourname.organizer.plist.example
@@ -10,7 +10,7 @@
 
     <key>ProgramArguments</key>
     <array>
-        <string>/PATH/TO/PYTHON_3</string>
+        <string>/PATH/TO/PYTHON</string>
         
         <string>organizer.py</string>
     </array>
